more IDE suggestions, fix == to equals so duplicate velplot points are removed